// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #swap gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 89080,
}
`;

exports[`PoolManager #swap gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 99156,
}
`;

exports[`PoolManager #swap gas cost with hooks and hooks params 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 101176,
}
`;
